@@ -1,4 +1,5 @@
 7.9.0
+ - Support parameterised versions of `query()` etc. (#644)
  - Put all feature tests back in config header. (#732)
  - Automate integration of feature tests into both CMake & autoconf. (#747)
  - Fix broken `to_buf()` on `zview`. (#728)
